--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">VetPet</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
+    <string name="register">Register</string>
+    <string name="petCare">PetCare</string>
+    <string name="enter_your_email_address_to_create_your_account">Enter your email address to create your account</string>
+    <string name="no_pets">No pets</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+    <string name="race">Race</string>
+    <string name="color">Color</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
+    <string name="genre">Genre</string>
+    <string name="Health">Health</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="input_data">Input data</string>
+    <string name="no_completed_fields">No completed fields</string>
 </resources>
