--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,10 @@
     <string name="add_pet">Add pet</string>
     <string name="birthdate">Birthdate</string>
     <string name="specie">Specie</string>
+    <string name="enter_your_password_to_finish_the_password_must_have_at_least_8_characters_one_uppercase_one_lowercase_and_one_number">Enter your password to finish. The password must have at least 8 characters, one uppercase, one lowercase and one number.</string>
+    <string name="request_an_appointment">Request an appointment</string>
+    <string name="send">Send</string>
+    <string name="clear">Clear</string>
+    <string name="upcoming_appointments">Upcoming Appointments</string>
+    <string name="past_appointments">Past Appointments</string>
 </resources>
